# KCN2

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  run.cmd
src/: main.py
tests/: __init__.py  test_main.py
