[tool.poetry]
name = "kcn2"
version = "0.1.0"
description = ""
authors = ["''"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
result = "^0.17.0"
orjson = "^3.10.15"
aiohttp = { extras = ["speedups"], version = "^3.11.12" }
loguru = "^0.7.3"
websockets = "^14.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.5"
mypy = "^1.15.0"
vulture = "^2.14"
pytest-cov = "^6.0.0"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = []
lint.fixable = ["I", "COM"]
lint.mccabe.max-complexity = 3
lint.pydocstyle.convention = "google"

target-version = "py313"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
